--- a/sections/product-info.liquid
+++ b/sections/product-info.liquid
@@ -145,7 +145,9 @@
   "name": "Product info",
   "tag": "section",
   "class": "section",
-  "settings": [],
+  "settings": [
+    
+  ],
   "blocks": [
     {
       "type": "@app"
