--- a/sections/related-products-new.liquid
+++ b/sections/related-products-new.liquid
@@ -53,6 +53,15 @@
       "id": "heading",
       "default": "You may also like",
       "label": "t:sections.related-products.settings.heading.label"
+    },
+    {
+      "type": "range",
+      "id": "products_to_show",
+      "min": 2,
+      "max": 10,
+      "step": 1,
+      "default": 4,
+      "label": "t:sections.related-products.settings.products_to_show.label"
     }
   ],
   "blocks": [
