--- a/assets/product-info.css
+++ b/assets/product-info.css
@@ -9,10 +9,9 @@ body {
   color: #000;
 }
 
-.container {
-  width: 100%;
-  max-width: 1640px;
-  margin: 0 auto;
+
+.product-info {
+  margin-bottom: 60px;
 }
 
 .flex-container {
@@ -241,82 +240,7 @@ body {
   gap: 60px;
 }
 
-.favorite-card {
-  height: 614px;
-  width: 100%;
-  max-width: 365px;
-}
 
-.favorite-card-image {
-  position: relative;
-}
-
-.favorite-card-image img {
-  width: 100%;
-  height: 560px;
-  object-fit: cover;
-}
-
-.favorite-card-collection {
-  top: 20px;
-  left: 20px;
-  position: absolute;
-  display: flex;
-  width: 52px;
-  height: 24px;
-  padding: 3px 12px;
-  align-items: center;
-  gap: 10px;
-  flex-shrink: 0;
-  background: #fff;
-  font-size: 12px;
-  text-transform: uppercase;
-}
-
-.favorite-card-add {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-}
-
-.favorite-card-add * {
-  stroke: #fff;
-}
-
-.favorite-card-add:hover {
-  cursor: pointer;
-}
-
-.favorite-card-description {
-  margin-top: 12px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.favorite-card-title {
-  display: flex;
-  flex-direction: column;
-}
-
-.favorite-card-title h3,
-.favorite-card-title p {
-  font-size: 16px;
-  font-weight: 400;
-}
-
-.favorite-card-price {
-  display: flex;
-  flex-direction: column;
-}
-
-.favorite-card-price span {
-  font-size: 16px;
-}
-
-.favorite-card-price-full {
-  color: #a9a9a9;
-  text-decoration: line-through;
-}
 
 @media screen and (max-width: 1490px) {
   .product-card {
@@ -686,5 +610,11 @@ body {
 @media screen and (min-width: 811px) {
   .product-info {
     margin-top: 34px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .product-info {
+    margin-top: 34px;
+    margin-bottom: 126px;
   }
 }
