--- a/sections/related-products-new.liquid
+++ b/sections/related-products-new.liquid
@@ -29,11 +29,10 @@
         {{ section.settings.heading }}
       </h2>
       <ul
-        class="grid product-grid grid--{{ section.settings.columns_desktop }}-col-desktop grid--{{ section.settings.columns_mobile }}-col-tablet-down"
-        role="list"
+        class="colection_list"
       >
         {% for recommendation in recommendations.products %}
-          <li class="grid__item">
+          <li class="">
             {% render 'card-product-new', card_product: recommendation %}
           </li>
         {% endfor %}
