--- a/sections/product-info.liquid
+++ b/sections/product-info.liquid
@@ -142,7 +142,7 @@
     {
       "type": "inline_richtext",
       "id": "payment_delivery",
-      "default": "",
+      "default": "Lorem",
       "label": "Payment, delivery and warranty for the goods"
     }
   ],
