--- a/sections/product-info.liquid
+++ b/sections/product-info.liquid
@@ -121,9 +121,7 @@
           <button class="delivery accordion">Оплата, доставка та гарантія для товару</button>
           <div class="panel">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat.
+              {{ section.settings.payment_delivery }}
             </p>
           </div>
         </div>
@@ -144,7 +142,7 @@
     {
       "type": "inline_richtext",
       "id": "payment_delivery",
-      "default": "",
+      "default": "Lorem",
       "label": "Payment, delivery and warranty for the goods"
     }
   ],
