--- a/sections/colection-filters.liquid
+++ b/sections/colection-filters.liquid
@@ -305,7 +305,20 @@
   "name": "Colection filters",
   "tag": "section",
   "class": "section",
-  "settings": [],
+  "settings": [
+    {
+      "type": "inline_richtext",
+      "id": "sorting_label",
+      "default": "Sorting",
+      "label": "schemaorting label"
+    },
+    {
+      "type": "inline_richtext",
+      "id": "filter_label",
+      "default": "Filters",
+      "label": "Filter label"
+    }
+  ],
   "blocks": [
     {
       "type": "@app"
